kubernetes.yaml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: event-backend
  template:
    metadata:
      labels:
        app: event-backend
    spec:
      containers:
        - name: event-backend
          image: event_backend
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: event-backend
spec:
  type: NodePort
  selector:
    app: event-backend
  ports:
    - name: http
      port: 80
      targetPort: 3000
      nodePort: 30000
